Fix for footer position being too low. * Footer should no longer be excessively lower than the main content

--- a/app/scss/epochtalk/epochtalk.scss
+++ b/app/scss/epochtalk/epochtalk.scss
@@ -68,7 +68,7 @@ label > input[type="checkbox"] {
 }
 
 .body-scroll-lock { overflow: hidden; }
-.main-content { min-height: 100%; }
+.main-content { min-height: 100%; margin-bottom: -120px; padding-bottom: 120px; }
 .content-spacer { min-height: 500px; }
 .thin-dotted-underline, .thin-underline {
   border-bottom: 1px dotted $color-gray-light;
